xx Feb 2010: 1.1.1 Miek Gieben <rdup@miek>
    * Skip gpg test when gpg is not found (Tom)
    * Rename strmode() to rdup_strmode for FreeBSD (Charlie Kester)
    * Fix when toplevel directory is a symlink (Charlie Kester)


24 Jan 2010: 1.1.0 Miek Gieben <rdup@miek.nl>
    * Release!
    * Tweaks and merges from the master branch
    * Remember: installs in /usr/local


22 Dec 2009: 1.1.0-rc1 Miek Gieben <rdup@miek.nl>
    * First release of the 1.1.0 branch
    * format change: %U, %G, %c and %t  added
    * default install path: /usr/local/
    * rdup: -a restore atime when reading files
    * rdup: -P is moved from rdup-tr 
    Todo:
    * documentation
    * more testing


14 Dec 2009: 1.1.0-dev1 Miek <rdup@miek.nl>
    * rdup added:
	- -a: reset atime
    * rdup-up:
	- set mtime
    * revert back to libnettle
	- and back to AES encryption


09 Aug 2009: 1.1.0-dev0 Miek <rdup@miek.nl>
    * Format change: add username, groupname and mtime
      Always output the files' contents
      %U username
      %G groupname
      %t is mtime of the fs object
    * Adapt all utils to this format change
	- rdup now handles -P itself
	- rdup is the only tool that accesses the files
	- rdup-tr does not do -P anymore
	- rdup-tr only processes from stdin to stdout
	- rdup-up only processes stdin
    * Loads of code cleanups
    * Use OpenSSL in favor of libnettle
	- AES encryption is replaced by blowfish
    * Change default install path /usr/local (Sebastian Kügler)