@@ -1,7 +1,8 @@
 xx Feb 2010: 1.1.1 Miek Gieben <rdup@miek>
     * Skip gpg test when gpg is not found (Tom)
     * Rename strmode() to rdup_strmode for FreeBSD (Charlie Kester)
-    * Fix when toplevel directory is a symlink (Charlie Kester)
+    * Dont descend when toplevel directory is a symlink (same behavoir
+      as Gnu tar)
 
 
 24 Jan 2010: 1.1.0 Miek Gieben <rdup@miek.nl>
